--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   firebase_auth: ^0.18.0+1
   firebase_auth_web: ^0.3.0+1
   provider: ^4.3.2+2
-  youtube_player_flutter: ^7.0.0+7
+  url_launcher: ^5.7.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
