--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_youtube_view: ^1.1.9
   youtube_player_flutter: ^7.0.0+7
   
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -58,6 +59,9 @@ flutter:
    - assets/images/product-placeholder.png
    - assets/images/project-placeholder.png
    - assets/images/quentin-grignet-unsplash.jpg
+   - assets/images/bg.jpg
+   - assets/images/snap-blocks.jpg
+   - assets/images/lamp.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
