--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   provider: ^4.3.2+2
   flutter_youtube_view: ^1.1.9
   youtube_player_flutter: ^7.0.0+7
+  google_sign_in: ^4.5.4
   
   
   # The following adds the Cupertino Icons font to your application.
