--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_youtube_view: ^1.1.9
   youtube_player_flutter: ^7.0.0+7
   google_sign_in: ^4.5.4
+  firebase_database: ^4.1.0
   
   
   # The following adds the Cupertino Icons font to your application.
